	* Fixed a buffer overflow bug in RD_Cnv_tm_to_DTString() in
	'rivendell/rd_common.c'.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'rivendell/rd_savelog.c' that broke multi-line
	log saves.
2017-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'rivendell/rd_savelog.c' that caused the value of
	certain logline fields to be used for every line.
2017-02-24 Todd Baker <bakert@rfa.org>
	* Added a conditional compile in 'rivendell/rd_common.c' to
	avoid the use of localtime_r() on MingW32.
2017-03-02 Todd Baker <bakert@rfa.org>
        * Fixed Typo in README for Expat Library.
2017-03-29 Todd Baker <bakert@rfa.org>
	* Added ticket field to all of the Rivendell Web Libary calls.  
	When provided - the ticket will be used for authentification
	instead of user/password.
        * Added rd_create_ticked.c and rd_create_ticket.h for creating
	an authentification ticket via the Rivendell Web API.
	* Added createticket_test.c test harness for testing of 
	creation of authentification tickets.
2017-03-30 Todd Baker <bakert@rfa.org>
	* Updated documentation files to include additional Authentification 
	Ticket field and also updated return codes where applicable.
2017-04-04 Todd Baker <bakert@rfa.org>
	*  Updated test harnes to included testing of ticket Authentification
	where possible and logical.  Delete tests are implemented in the add
	procedures.
	*  Updated tests and docbook entries to show correct error code 
	return values.
2017-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'rivendell/rd_savelog.c' that caused negative values
	for 'START_POINT', 'END_POINT', 'SEGUE_START_POINT',
	'SEGUE_END_POINT', 'FADEUP_POINT', 'FADEDOWN_POINT',
	'DUCK_UP_GAIN' and 'DUCK_DOWN_GAIN' to be corrupted.
	* Added 'logline_fadeup_gain' and 'logline_fadedown_gain' to the
	'save_logline_values' struct in 'rivendell/rd_savelog.h'.
	* Added 'logline_fadedown_gain' to the 'rd_logline' struct in
	'rivendell/rd_listlog.h'.